k8s/overlays/gke/service-patch.yaml
# Service patch for BackendConfig annotations
apiVersion: v1
kind: Service
metadata:
  name: beatsight-backend
  namespace: beatsight
  annotations:
    cloud.google.com/backend-config: '{"default": "beatsight-backend-config"}'
    cloud.google.com/neg: '{"ingress": true}'
---
apiVersion: v1
kind: Service
metadata:
  name: beatsight-frontend
  namespace: beatsight
  annotations:
    cloud.google.com/backend-config: '{"default": "beatsight-frontend-config"}'
    cloud.google.com/neg: '{"ingress": true}'
